tests/fixtures/valid/async_features.cyl
// Test async function with struct literal - should pass
async fn test() -> void {
    let x = SomeStruct { field: 42 };
}
