tests/fixtures/invalid/async_features.cyl
// This should fail - using unimplemented features
async fn test() -> void {
    let x = SomeStruct { field: 42 };
}
